# routes/api.php
@@ -43,3 +43,11 @@ Route::middleware('auth:sanctum')->group(function () {
     });
 });
 
+
+
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('posts', [PostController::class, 'index']);
+    Route::post('posts', [PostController::class, 'store']);
+});
+
